logs/Slang/generated/hdlconv/hdlconvertor_p777.sv.log
name: hdlconvertor_p777
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p777.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p777.sv:13:9: error: no implicit conversion from 'p::<unnamed enum>' to 'q::teeth_t'; explicit conversion exists, are you missing a cast?
myteeth = FALSE;
~~~~~~~ ^ ~~~~~
